--- a/Front_End/my-projet-app/package.json
+++ b/Front_End/my-projet-app/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "dom": "^0.0.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
@@ -40,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.10"
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.36.1",
+    "tailwindcss": "^3.4.12"
   }
 }
